# osmo-trx

./: CMakeLists.txt  config.h.cmake.in  configure.ac
CommonLibs/: CMakeLists.txt  trx_vty.c
Transceiver52M/: CMakeLists.txt  Makefile.am  osmo-trx.cpp
Transceiver52M/device/: Makefile.am
Transceiver52M/device/xtrx/: Makefile.am  XTRXDevice.cpp  XTRXDevice.h
contrib/systemd/: Makefile.am
debian/: control
doc/examples/osmo-trx-xtrx/: osmo-trx-xtrx.cfg
